Fixed invisible scroll bar issue

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -197,7 +197,7 @@ a:hover {
 .page-content,
 .main-nav--hamburger,
 .documentation-home {
-	position: fixed;
+	position: absolute;
 }
 .main-nav--links,
 .product-switcher--menu {
@@ -436,9 +436,9 @@ a.product-switcher--item:hover {
 	transition: opacity 0.2s ease;
 	-webkit-overflow-scrolling: touch;
 }
-.page-content::-webkit-scrollbar              { background-color: #fff; width: 1em; }
-.page-content::-webkit-scrollbar-track        { background-color: #000; }
-.page-content::-webkit-scrollbar-thumb        { border: 4px solid #fff; background-color: #000; border-radius: 0.5em; }
+.page-content::-webkit-scrollbar              { background-color: #fff; width: 1rem; }
+.page-content::-webkit-scrollbar-track        { background-color: #fff; }
+.page-content::-webkit-scrollbar-thumb        { border: 4px solid #fff; background-color: #CBD0D6; border-radius: 0.5rem; }
 
 .page-content.hide {
 	opacity: 0.2;
